--- a/90-appendixA.Rmd
+++ b/90-appendixA.Rmd
@@ -5,3 +5,9 @@
 <!-- If you feel it necessary to include an appendix, it goes here. The first appendix should include the commands above. -->
 
 # Models for spatial structure
+
+## Comparison of AGHQ to NUTS
+
+## Additional simulation study results
+
+## Additional HIV study results
