--- a/front-and-back-matter/_acknowledgements.Rmd
+++ b/front-and-back-matter/_acknowledgements.Rmd
@@ -3,8 +3,9 @@ I am grateful for the research environment provided by the Modern Statistics and
 Thank you to Mike McLaren, Kevin Esvelt, the Nucleic Acid Observatory team, and the Sculpting Evolution lab for hosting my visit to the MIT Media Lab.
 <!-- Boston: Lenni, Lenny, Simon, Janika, Frances, Geetha, Leilani, Tammy. -->
 Thank you to Alex Stringer, and the Department of Statistics and Actuarial Science for hosting my visit to the University of Waterloo.
-Without Alex, Chapter \@ref(naomi-aghq) likely would never have gotten moving.
+Without Alex, Chapter \@ref(naomi-aghq) would never have gotten moving.
 My sense for what matters has been shaped (arguably improved) by the Effective Altruism community.
+Thank you to the Meridian, Trajan, and LEAH offices for hosting me.
 This research was made possible by funding provided by the Bill & Melinda Gates Foundation and EPSRC.
 <!-- Parents: Deborah, Karl. -->
 <!-- Grandparents: Kath, Tony. -->
