--- a/references.bib
+++ b/references.bib
@@ -2033,3 +2033,101 @@ doi = {10.1201/9781420072884-c30}
   volume={32},
   year={2019}
 }
+
+@article{cramb2018investigation,
+  title={Investigation of Bayesian spatial models},
+  author={Cramb, SM and Duncan, EW and Baade, PD and Mengersen, KL},
+  year={2018},
+  publisher={Cancer Council Queensland and Queensland University of Technology (QUT)}
+}
+
+@book{haining2003spatial,
+  title={Spatial data analysis: theory and practice},
+  author={Haining, Robert P},
+  year={2003},
+  publisher={Cambridge university press}
+}
+
+@article{diggle2013spatial,
+  title={Spatial and spatio-temporal log-Gaussian Cox processes: extending the geostatistical paradigm},
+  author={Diggle, Peter J and Moraga, Paula and Rowlingson, Barry and Taylor, Benjamin M and others},
+  journal={Statistical Science},
+  volume={28},
+  number={4},
+  pages={542--563},
+  year={2013},
+  publisher={Institute of Mathematical Statistics}
+}
+
+@article{gossl2001bayesian,
+  title={Bayesian spatiotemporal inference in functional magnetic resonance imaging},
+  author={G{\"o}ssl, Christoff and Auer, Dorothee P and Fahrmeir, Ludwig},
+  journal={Biometrics},
+  volume={57},
+  number={2},
+  pages={554--562},
+  year={2001},
+  publisher={Wiley Online Library}
+}
+
+@article{dwyer2015drinking,
+  title={{Drinking patterns in US counties from 2002 to 2012}},
+  author={Dwyer-Lindgren, Laura and Flaxman, Abraham D and Ng, Marie and Hansen, Gillian M and Murray, Christopher JL and Mokdad, Ali H},
+  journal={American Journal of Public Health},
+  volume={105},
+  number={6},
+  pages={1120--1127},
+  year={2015},
+  publisher={American Public Health Association}
+}
+
+@article{schmid2006bayesian,
+  title={Bayesian methods for pharmacokinetic models in dynamic contrast-enhanced magnetic resonance imaging},
+  author={Schmid, Volker J and Whitcher, Brandon and Padhani, Anwar R and Taylor, N Jane and Yang, Guang-Zhong},
+  journal={IEEE Transactions on Medical Imaging},
+  volume={25},
+  number={12},
+  pages={1627--1636},
+  year={2006},
+  publisher={IEEE}
+}
+
+@article{saracco2010modeling,
+  title={Modeling spatial variation in avian survival and residency probabilities},
+  author={Saracco, James F and Royle, J Andrew and DeSante, David F and Gardner, Beth},
+  journal={Ecology},
+  volume={91},
+  number={7},
+  pages={1885--1891},
+  year={2010},
+  publisher={Wiley Online Library}
+}
+
+@article{weiss2015re,
+  title={Re-examining environmental correlates of Plasmodium falciparum malaria endemicity: a data-intensive variable selection approach},
+  author={Weiss, Daniel J and Mappin, Bonnie and Dalrymple, Ursula and Bhatt, Samir and Cameron, Ewan and Hay, Simon I and Gething, Peter W},
+  journal={Malaria journal},
+  volume={14},
+  number={1},
+  pages={1--18},
+  year={2015},
+  publisher={Springer}
+}
+
+@article{oliver2015soil,
+  title={Soil, food security and human health: a review},
+  author={Oliver, Margaret A and Gregory, PJ},
+  journal={European Journal of Soil Science},
+  volume={66},
+  number={2},
+  pages={257--276},
+  year={2015},
+  publisher={Wiley Online Library}
+}
+
+@book{lawson2013statistical,
+  title={Statistical Methods in Spatial Epidemiology},
+  author={Lawson, Andrew B},
+  year={2013},
+  publisher={John Wiley \& Sons}
+}
