--- a/01-introduction.Rmd
+++ b/01-introduction.Rmd
@@ -64,7 +64,7 @@ ssa_pop2022 <- 1.2 * 1e9 #' From the world bank
 
 This thesis is about applied and methodological Bayesian statistics.
 It is applied and methodological in that I am concerned with real world questions and the means to answer them.
-The statistical approach is Bayesian because I used probability theory to arrive at conclusions based on models for observed data.
+The statistical approach is Bayesian because I use probability theory to arrive at conclusions based on models for observed data.
 
 (ref:gbd) HIV/AIDS is the largest cause of annual DALYs among individuals aged >1 year in SSA [@ihme2019]. One DALY represents the loss of the equivalent of one year of full health, and is calculated by the sum of years of life lost and years lost due to disability. The disability weights vary between 0 (full health) and 1 (death) depending on severity of the condition.
 
@@ -72,16 +72,17 @@ The statistical approach is Bayesian because I used probability theory to arrive
 knitr::include_graphics("figures/introduction/gbd.png")
 ```
 
-The real world questions are related to strategic information for planning the human immunodeficiency virus (HIV) epidemic response in sub-Saharan Africa (SSA).
+The questions in this thesis relate to strategic information for planning the human immunodeficiency virus (HIV) epidemic response in sub-Saharan Africa (SSA).
 Over 40 years since the beginning of the epidemic, HIV is the largest annual cause of disability adjusted life years (DALYs) in SSA among non-infants [@ihme2019; Figure \@ref(fig:gbd)].
 Quantification of the epidemic using statistics is an important part of the public health response.
-Effective implementation of both HIV prevention and treatment requires strategic information.
-However, producing suitable estimates of relevant indicators is challenging.
+Effective implementation of HIV prevention and treatment requires strategic information.
+However, producing suitable estimates of relevant indicators is made difficult by a range of statistical challenges.
 
 The data I use were recorded from national household surveys or routinely collected from healthcare facilities providing HIV services.
-An important feature of these data are the location and time at which each observation was recorded
-While diverse, spatio-temporal data have distinctive recurring commonalities across application settings.
-As a result, the work in this thesis both makes use of, and aspires to contribute to, modelling techniques from spatio-temporal statistics.
+An important feature of these data are the location and time at which each observation was recorded.
+Spatio-temporal data occur across a range of application settings.
+As well as being diverse, they do have distinctive recurring commonalities which make their collective study worthwhile.
+The work conducted in this thesis makes use of, and aspires to contribute to, techniques from spatio-temporal statistics.
 
 Computation is an essential part of modern statistical practice.
 Each project in this thesis, and the thesis itself, is accompanied by R [@r] code, hosted on GitHub at [`https://github.com/athowes`](https://github.com/athowes).
@@ -100,9 +101,9 @@ The Global AIDS Strategy recommends prioritising interventions on the basis of b
 I estimated the size of behavioural risk groups across priority countries to enable implementation of this strategy, and assessed the potential benefits in terms of numbers of new infections prevented [@howes2023spatio].
 This work was included in the UNAIDS Global AIDS Update 2022 and 2023.
 * Chapter \@ref(naomi-aghq): The Naomi small-area estimation model [@eaton2021naomi] is used by countries to estimate district-level HIV indicators.
-With this model in mind, I developed an approximate Bayesian inference method combining adaptive Gauss-Hermite quadrature with principal components analysis [@howes2023fast].
-I applied the method to data from Malawi, and analysed the consequences of inference method choice for policy relevant outcomes.
-Further, I open the door to a new class of fast, flexible, and accurate Bayesian inference algorithms.
+First, I implemented the integrated nested Laplace approximations using automatic differentiation, such that the method is compatible with Naomi, opening the door to a new class of fast, flexible, and accurate Bayesian inference algorithms.
+Second, I developed an approximate Bayesian inference method combining adaptive Gauss-Hermite quadrature with principal components analysis [@howes2023fast].
+I applied these method to data from Malawi, and analysed the consequences of inference method choice for policy relevant outcomes.
 * Chapter \@ref(conclusions): Finally, I discuss avenues for future work, and my conclusions regarding the research, as well as its strengths and weaknesses.
 
 Though chronological order is recommended, Chapters \@ref(beyond-borders), \@ref(multi-agyw) and \@ref(naomi-aghq) may be read in any order.
